tests/neg-custom-args/captures/selftype.scala
@annotation.experimental class C(x: () => Unit) extends Pure // error

@annotation.experimental class D(@annotation.constructorOnly x: () => Unit) extends Pure // ok

